made it work (not yet but soon)
Made it fail on purpose before adding implementation. and once it passes in Checkpoint 4 (really) (not this one), then its doing what it's meant to be doing!